# GameOfLife

./: CMakeLists.txt  README.md
include/: Game.hpp  OpenGLView.hpp  TerminalView.hpp  View.hpp
src/: Game.cpp  OpenGLView.cpp  TerminalView.cpp  main.cpp
